# challengedataengineering

./: .gitignore  README  main.py  pyproject.toml
src/challenge/: main.py
src/challenge/common/: etl_job.py  generated_file_cleaner.py  utils.py
src/challenge/csv_files/: eur_usd_last10y.csv  products3.csv
src/challenge/data/: data_extracter.py
src/challenge/profit/: profit_etl.py
src/challenge/profit/data/: data_extracter.py  data_loader.py  data_transformer.py
